# ABYSS

./: .gitignore  ABYSS_BLUEPRINT.md  Cargo.toml  README.md  form-submit.js  index.html  invest.html  presale-quote.js  transition.js  wallet.html
.cargo/: deny.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
crates/abyss-consensus/: Cargo.toml
crates/abyss-consensus/src/: lib.rs  round.rs
crates/abyss-core/: Cargo.toml
crates/abyss-core/src/: address.rs  block.rs  chain.rs  coin.rs  genesis.rs  hashing.rs  lib.rs  mempool.rs  storage.rs  transaction.rs
crates/abyss-crypto/: Cargo.toml
crates/abyss-crypto-adapter/: Cargo.toml  README.md
crates/abyss-crypto-adapter/src/: lib.rs
crates/abyss-crypto-api/: Cargo.toml
crates/abyss-crypto-api/src/: lib.rs
crates/abyss-crypto/audit/: initial-findings.md
crates/abyss-crypto/fuzz/: Cargo.toml
crates/abyss-crypto/fuzz/fuzz_targets/: fuzz_keypair_generation.rs  fuzz_signature_deserialization.rs
crates/abyss-crypto/src/: lib.rs
crates/abyss-node/: Cargo.toml
crates/abyss-node/src/: data.rs  main.rs
crates/abyss-social/: Cargo.toml
crates/abyss-social/src/: lib.rs
crates/abyss-tokenomics/: Cargo.toml
crates/abyss-tokenomics/src/: lib.rs
crates/abyss-wallet/: Cargo.toml
crates/abyss-wallet/src/: account.rs  agent_policy.rs  lib.rs
data/: tokenomics.json
docs/: AI_COLLABORATION.md  ARCHITECTURE.md  PHILOSOPHY.md  PRESALE_STRATEGY.md  README.md  ROADMAP.md  TASKS.md
docs/adr/: ADR-0000.md  ADR-0001.md  ADR-0002.md  ADR-0003.md  ADR-0004.md  ADR-0005.md  ADR-0006.md  ADR-0007.md  ADR-0008.md  ADR-0009.md  ADR-0010.md  ADR-0011.md  ADR-0012.md  ADR-0013.md  ADR-0014.md  ADR-0015.md  ADR-0016.md
docs/architecture/: STATUS.md
docs/social/: SOCIAL.md
docs/tokenomics/: TOKENOMICS.md
docs/wallet/: WALLET.md
tools/: export_tokenomics.mjs  static_server.mjs
