[workspace]
resolver = "2"
members = [
    "crates/abyss-core",
    "crates/abyss-consensus",
    "crates/abyss-crypto",
    "crates/abyss-node",
    "crates/abyss-social",
    "crates/abyss-tokenomics",
    "crates/abyss-wallet",
    "crates/abyss-crypto-api",\n    "crates/abyss-crypto-adapter",
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://example.invalid/abyss"
authors = ["ABYSS Contributors"]
