[package]
name = "abyss-node"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "abyss-node"
path = "src/main.rs"

[dependencies]
abyss-core = { path = "../abyss-core" }
abyss-wallet = { path = "../abyss-wallet" }
