[package]
name = "abyss-node"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "abyss-node"
path = "src/main.rs"

[dependencies]
abyss-core = { path = "../abyss-core" }
abyss-consensus = { path = "../abyss-consensus" }
abyss-social = { path = "../abyss-social" }
abyss-tokenomics = { path = "../abyss-tokenomics" }
abyss-wallet = { path = "../abyss-wallet" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
